--- a/src/components/Discover/profileCard.css
+++ b/src/components/Discover/profileCard.css
@@ -1,9 +1,141 @@
 
+.profile-card-parent {
+  position: relative;
+}
+
 .profileCard {
-  width: 40%;
-  height: 80%;
+  /* height: 100%; */
   left: 50%;
   transform: translate(-50%,0);
+  position: relative;
+}
+
+@media screen and (max-width: 460px) {
+  .profileCard {
+    min-width: 100px;
+    width: 90vw;
+  }
+
+  .profile-image {
+    object-fit: contain;
+    border-radius: 1000px;
+    height: 40px;
+    width: 40px;
+  }
+
+  .profile-card-details {
+    margin: 0px;
+    padding: 0px;
+    font-size: .5em;
+  }
+
+  .profile-card-details {
+    font-size: .5em;
+  }
+
+  .badge-secondary {
+    font-size: .2em;
+  }
+
+  .card-title-text {
+    font-size: .8em;
+  }
+
+  .badge-outline {
+    font-size: .4em;
+  }
+
+  .badge-secondary {
+    font-size: 6px;
+  }
+
+  .card-header {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+  }
+
+  .card-bottom {
+    padding-top: 0px;
+    padding-bottom: 20px;
+  }
+
+  .carousel-item {
+    height: 40vh;
+  }
+
+  .card-p {
+    font-size: .7em;
+  }
+}
+
+@media screen and (min-width: 460px) {
+  .profileCard {
+    width: 40vw;
+    min-width: 500px;
+    max-width: 800px;
+  }
+
+  .profile-image {
+    height: 80px;
+    width: 80px;
+  }
+
+  .profile-card-details {
+    font-size: 1em;
+  }
+
+  .profile-card-details {
+    font-size: 1em;
+  }
+
+  .badge-secondary {
+    font-size: .5em;
+  }
+
+  .card-title-text {
+    font-size: 1.3em;
+  }
+
+  .badge-outline {
+    padding: 10px;
+    font-size: .7em;
+  }
+
+  .badge-secondary {
+    font-size: .5em;
+  }
+
+  .card-header {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+  }
+
+  .card-bottom {
+    padding-top: 0px;
+    padding-bottom: 60px;
+  }
+
+  .carousel-item {
+    height: 40vh;
+    min-height: 200px;;
+  }
+}
+
+.names-parent {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.owner {
+  align-self: center;
+  margin-left: 10px;
+  background-color: #3d4451;
+  color: white;
+  font-size: .7em;
 }
 
 .card-header {
@@ -12,10 +144,6 @@
   border-top-right-radius: 16px;
   display: flex;
   flex-flow: column nowrap;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 30px;
-  padding-bottom: 10px;
 }
 
 .card-header-title {
@@ -28,20 +156,11 @@
 .profile-image {
   object-fit: contain;
   border-radius: 1000px;
-  height: 80px;
-  width: 80px;
 }
 
 .profile-card-details {
   margin: 0px;
   padding: 0px;
-  font-size: 1em;
-}
-
-@media screen and (max-width: 460px) {
-  .profile-card-details {
-    font-size: .6em;
-  }
 }
 
 .profile-details {
@@ -54,16 +173,29 @@
   padding-bottom: 5px;
 }
 
+
+.carousel-container {
+  position: relative;
+}
+
+.figure-carousel {
+  position: relative;
+}
+
 .carouselImage {
   object-fit: fill;
+  position: relative;
 }
 
 
 .card-title-text {
   margin: 0px;
   font-weight: bold;
-  font-size: 1.3em;
   padding: 0px;
+}
+
+.carousel {
+  position: relative;
 }
 
 .carousel-item {
@@ -72,7 +204,7 @@
 
 .carousel-item {
   width: 100%;
-  height: 40vh;
+  position: relative;
 }
 
 .w-full {
@@ -87,14 +219,10 @@
 
 .badge-outline {
   padding: 10px;
-  font-size: .7em;
-}
-
-.badge-secondary {
-  font-size: .5em;
 }
 
 .carousel-buttons {
+  position: relative;
   background-color: none;
   padding: 0px;
   z-index: 2;
@@ -110,8 +238,6 @@
   background-color: white;
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
-  padding-top: 0px;
-  padding-bottom: 60px;
 }
 
 .profileCard {
