--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   height: 100vh;
   margin: 0;
+  line-height: 1.5;
 }
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
