--- a/src/components/Discover/profileCard.css
+++ b/src/components/Discover/profileCard.css
@@ -242,3 +242,11 @@
 .profileCard {
   background-color: white;
 }
+
+.no-image-drag {
+  -webkit-user-drag: none;
+  -moz-user-select:none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
