--- a/src/components/Discover/cardStack.css
+++ b/src/components/Discover/cardStack.css
@@ -8,13 +8,18 @@
 }
 
 @media screen and (min-width: 460px) {
+
+  .card-stack-parent {
+    overflow: hidden;
+  }
+
   .discover-cardview-parent {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    /* border: solid green; */
+    height: 90vh;
+    overflow: hidden;
   }
 
   @keyframes fadeIn {
@@ -77,6 +82,7 @@
     flex-flow: column nowrap;
     align-items: center;
     margin: auto;
+    overflow: hidden;
     /* gap: -20px; */
     /* border: solid red; */
   }
