--- a/src/components/Discover/cardStack.css
+++ b/src/components/Discover/cardStack.css
@@ -1,13 +1,13 @@
-@media screen and (max-width: 460px) {
+/* @media screen and (max-width: 460px) {
   .discover-cardview-parent {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: space-around;
   }
-}
+} */
 
-@media screen and (min-width: 460px) {
+@media screen and (min-width: 0px) {
 
   .card-stack-parent {
     overflow: hidden;
@@ -73,18 +73,21 @@
   }
 
   .card-stack {
-    /* top: 20%; */
     width: 800px;
-    height: 100vh;
+    height: 800px;
     overflow: none;
     /* position: relative; */
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    margin: auto;
+    /* margin: auto; */
     overflow: hidden;
     /* gap: -20px; */
     /* border: solid red; */
+  }
+
+  .profile-card {
+    padding-top: 8vh;
   }
 
   .profile-card:nth-last-child(1) {
@@ -96,7 +99,9 @@
   }
 
   .profile-card:nth-last-child(2) {
-    margin-top: 55px;
+    margin-top: min(70px, 4%);
+    /* border: solid red; */
+    height: fit-content;
     scale: .9;
     transform: translate(-5%,0);
     opacity: 1;
@@ -104,10 +109,13 @@
 
 
   .profile-card:nth-last-child(3) {
-    margin-top: 135px;
-    scale: .7;
-    transform: translate(-22%,0);
-    opacity: .4;
+    /* margin-top: 35px; */
+    margin-top: min(60px, 4%);
+    /* scale: .7; */
+    /* transform-origin: bottom; */
+    transform: translate(-15%,0) scaleX(.7);
+    -webkit-mask-image: -webkit-gradient(linear, bottom, top, from(rgb(255, 255, 255, 1)), to(rgba(255, 255, 255, 0)));
+    opacity: .2;
   }
 
   .profile-card {
@@ -143,7 +151,7 @@
     100% {
       transform: translate(-5%, 0);
       scale: .9;
-      margin-top: 55px;
+      margin-top: min(70px, 4%);
       opacity: 1;
     }
   }
@@ -153,6 +161,18 @@
     animation-duration: .5s;
     animation-iteration-count: once;
   }
+
+  @keyframes drop-in {
+    0% {
+      transform: translate(-15%,-5%) scaleX(.7);
+      /* scale: .7; */
+    }
+    100% {
+      transform: translate(-15%,0) scaleX(.7);
+      /* scale: .7; */
+    }
+  }
+
 
   @keyframes mount {
     0% {
@@ -229,7 +249,7 @@
       box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0);
     }
     50% {
-      box-shadow: 0 0 15px 2px rgba(209, 1, 1, 0.5);
+      box-shadow: 0 0 15px 2px rgba(139, 255, 72, 0.5);
     }
     100% {
       box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0);
@@ -256,5 +276,12 @@
     -ms-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+  }
+}
+
+
+@media screen and (max-width: 700px) {
+  .buttons {
+    visibility: hidden;
   }
 }
