--- a/src/components/Discover/match.css
+++ b/src/components/Discover/match.css
@@ -11,7 +11,8 @@
   z-index: 5;
   position: absolute;
   width: 100%;
-  height: 80vh;
+  height: 100vh;
+  padding-bottom: 20vh;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(4px);
   display: flex;
