--- a/src/views/discover.css
+++ b/src/views/discover.css
@@ -6,6 +6,13 @@
   justify-content: space-around;
 } */
 
+@media screen and (min-width: 0px) {
+
+.discover-parent {
+  width: 100vw;
+  /* border: solid green; */
+}
+
 @keyframes run {
   0% {
     /* left: -100%; */
@@ -28,27 +35,50 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  width: fit-content;
-  margin-left: 50%;
+  width: 100px;
+  /* margin-left: 50%; */
+  margin: auto;
   justify-content: center;
-  height: 100%;
+  height: 100px;
   scale: 3;
-  margin-top: 30vh;
+  margin-top: 35vh;
   animation-name: run;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   gap: 7px;
+  z-index: 2;
+  /* transform: translate(-25%, 0); */
 }
 
 .loading-dog1 {
   scale: 1.2;
+  color: #5C7F67;
 }
 
 .loading-dog2 {
   transform: scaleX(-1);
+  color: #5D5656;
+}
+
+@keyframes fadeIn {
+  0% {
+    /* left: -100%; */
+    /* transform: scaleX(1) */
+    opacity: 0;
+  }
+  100% {
+    /* transform: scaleX(-1); */
+    /* left: 100%; */
+    opacity: 1;
+  }
 }
 
 .discover-view {
   /* background-color: white; */
   overflow: hidden;
+  animation-name: fadeIn;
+  animation-duration: 2s;
+  animation-iteration-count: once;
+}
+
 }
